<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>oscarFax</groupId>
  <artifactId>FaxWs</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>war</packaging>
  <name>OSCAR Fax</name>
  <description>Frontend to fax service to be used with OSCAR EMR</description>
  <licenses>
    <license>
      <name>GPLv2</name>
      <url>http://www.gnu.org/licenses/gpl-2.0.txt</url>
    </license>
  </licenses>
  <build>
	<plugins>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-compiler-plugin</artifactId>
			<configuration>
				<source>1.8</source>
				<target>1.8</target>
			</configuration>
		</plugin>
		<plugin>
	        <groupId>com.mycila.maven-license-plugin</groupId>
	        <artifactId>maven-license-plugin</artifactId>
	        <version>1.10.b1</version>
	        <executions>
	          <execution>
	            <goals>
	              <goal>check</goal>
	            </goals>
	            <configuration>
	              <header>util/header/mcmaster.txt</header>
	              <includes>
                	<include>src/main/java/**/*.java</include>
                  </includes>                  
	            </configuration>
	           </execution>
	         </executions>	         
	         <configuration>
	         	<header>util/header/mcmaster.txt</header>
	              <includes>
                	<include>src/main/java/**/*.java</include>
                  </includes>
                  <strictCheck>true</strictCheck>	         	
	         </configuration>
         </plugin>
	</plugins>
  </build>
  <dependencies>
                <dependency>
                        <groupId>junit</groupId>
                        <artifactId>junit</artifactId>
                        <version>4.4</version>
                        <scope>test</scope>
                </dependency>

  	<dependency>
		<groupId>org.apache.commons</groupId>
		<artifactId>commons-io</artifactId>
		<version>1.3.2</version>
	</dependency>
  	<dependency>
  		<groupId>commons-lang</groupId>
  		<artifactId>commons-lang</artifactId>
  		<version>2.6</version>
  	</dependency>
  	<dependency>
  		<groupId>log4j</groupId>
  		<artifactId>log4j</artifactId>
  		<version>1.2.16</version>
  	</dependency>
  	<dependency>
  		<groupId>org.springframework</groupId>
  		<artifactId>spring-core</artifactId>
  		<version>4.0.1.RELEASE</version>
  	</dependency>
  	<dependency>
  		<groupId>org.springframework</groupId>
  		<artifactId>spring-orm</artifactId>
  		<version>4.0.1.RELEASE</version>
  	</dependency>
  	<dependency>
  		<groupId>org.springframework</groupId>
  		<artifactId>spring-tx</artifactId>
  		<version>4.0.1.RELEASE</version>
  	</dependency>
  	<dependency>
  		<groupId>org.apache.cxf</groupId>
  		<artifactId>cxf-rt-frontend-jaxws</artifactId>
  		<version>${cxf-version}</version>
  	</dependency>
  	<dependency>
  		<groupId>org.apache.cxf</groupId>
  		<artifactId>cxf-rt-transports-http</artifactId>
  		<version>${cxf-version}</version>
  	</dependency>
  	<dependency>
  		<groupId>javax.xml.bind</groupId>
  		<artifactId>jaxb-api</artifactId>
  		<version>2.2.11</version>
  	</dependency>
  	<dependency>
  		<groupId>org.apache.cxf</groupId>
  		<artifactId>cxf-rt-frontend-jaxrs</artifactId>
  		<version>${cxf-version}</version>
  	</dependency>
  	<dependency>
  		<groupId>org.springframework</groupId>
  		<artifactId>spring-web</artifactId>
  		<version>4.0.1.RELEASE</version>
  	</dependency>
  	<dependency>
  		<groupId>org.apache.openjpa</groupId>
  		<artifactId>openjpa</artifactId>
  		<version>2.1.1</version>
  	</dependency>
  	<dependency>
  		<groupId>mysql</groupId>
  		<artifactId>mysql-connector-java</artifactId>
  		<version>5.1.30</version>
  	</dependency>
  	<dependency>
  		<groupId>commons-beanutils</groupId>
  		<artifactId>commons-beanutils</artifactId>
  		<version>1.9.1</version>
  	</dependency>
  	<dependency>
  		<groupId>commons-collections</groupId>
  		<artifactId>commons-collections</artifactId>
  		<version>3.2</version>
  	</dependency>
  	<dependency>
  		<groupId>commons-logging</groupId>
  		<artifactId>commons-logging</artifactId>
  		<version>1.1.3</version>
  	</dependency>
  	<dependency>
  		<groupId>net.sf.ezmorph</groupId>
  		<artifactId>ezmorph</artifactId>
  		<version>1.0.6</version>
  	</dependency>
  	<dependency>
  		<groupId>net.sf.gnu-hylafax</groupId>
  		<artifactId>gnu-hylafax-core</artifactId>
  		<version>1.0.3</version>
  	</dependency>
  	<dependency>
  		<groupId>com.lowagie</groupId>
  		<artifactId>itext</artifactId>
  		<version>4.2.1</version>
  	</dependency>
  	<dependency>
  		<groupId>net.sf.json-lib</groupId>
  		<artifactId>json-lib</artifactId>
  		<version>2.4</version>
  		<classifier>jdk15</classifier>
  	</dependency>
  	<dependency>
  		<groupId>org.codehaus.jackson</groupId>
  		<artifactId>jackson-jaxrs</artifactId>
  		<version>1.9.13</version>
  	</dependency>
  </dependencies>
  <properties>
  	<cxf-version>2.7.10</cxf-version>
  </properties>
</project>
